objects/USL_Integration_defaults__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Applicationid__c</fullName>
        <label>Applicationid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Companyid__c</fullName>
        <label>Companyid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_ConfigGroup__c</fullName>
        <label>ConfigGroup</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_SecureSite_JSON__c</fullName>
        <label>SecureSite_JSON</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ESC_Securesite_HAMCKey__c</fullName>
        <label>Securesite_HAMCKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludeActiveSubs__c</fullName>
        <label>IncludeActiveSubs</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IncludeLapsedSubs__c</fullName>
        <label>IncludeLapsedSubs</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Messageid__c</fullName>
        <label>Messageid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <label>Segment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Timestamp__c</fullName>
        <label>Timestamp</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>applyDate__c</fullName>
        <label>applyDate</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>domainid__c</fullName>
        <label>domainid</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <label>isActive</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isPrimary__c</fullName>
        <label>isPrimary</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>partnertype__c</fullName>
        <label>partnertype</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>USL Integration defaults</label>
</CustomObject>